Correcciones de todos los elementos visuales y mejoras en la usabilidad

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -198,7 +198,7 @@
         </div>
         <!-- /.row -->
         <!-- Main row -->
-        {% if datos.role == 1 %}
+        {% comment %} {% if datos.role == 1 %}
         <div class="row">
           <!-- Left col -->
           <div class="col-md-12">
@@ -260,7 +260,7 @@
           </div>
           <!-- /.col -->
         </div>
-        {% endif %}
+        {% endif %} {% endcomment %}
         <!-- /.row -->
       </div>
       <!--/. container-fluid -->
