--- a/templates/teamwork/workload.html
+++ b/templates/teamwork/workload.html
@@ -1,4 +1,7 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %}
+{% load parse_iso %}
+{% load static %} 
+{% block content %}
 
 <div class="wrapper">
   <!-- Content Wrapper. Contains page content -->
@@ -41,7 +44,8 @@
 
                 <h3 class="profile-username text-center"></h3>
 
-                <p class="text-muted text-center">Software Engineer</p>
+                <p class="text-muted text-center">{{datos.user.nombreUsuario}} {{datos.user.apellidoUsuario}}</p>
+                <p class="text-muted text-center">Email: {{datos.user.correoElectronico}} Rol: {{datos.user.idRolUsuario}}</p>
 
                 <ul class="list-group list-group-unbordered mb-3">
                   <li class="list-group-item">
@@ -51,7 +55,7 @@
                     <b>Tareas Atrasadas</b> <a class="float-right">8</a>
                   </li>
                   <li class="list-group-item">
-                    <b>Tareas Asignadas</b> <a class="float-right">452</a>
+                    <b>Tareas Asignadas</b> <a class="float-right">{{datos.tareas|length}}</a>
                   </li>
                 </ul>
 
@@ -98,7 +102,7 @@
                                 <th scope="row">{{tarea.idTarea}}</th>
                                 <td>{{tarea.nombreTarea}}</td>
                                 <td>{{tarea.descripcionTarea}}</td>
-                                <td>{{tarea.fechaPlazo}}</td>
+                                <td>{{tarea.fechaPlazo|parse_iso|date:'d/m/Y'}}</td>
                               </tr>
                             {% endfor %}
 
