Actualizacion de origenes de imagenes para template del correo.

--- a/templates/email/email.html
+++ b/templates/email/email.html
@@ -1,8 +1,7 @@
-{% load static %}
 
 <!DOCTYPE html>
 
-<html lang="en" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml">
+<html lang="es" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml">
 
 <head>
 	<title></title>
@@ -114,7 +113,7 @@
 																style="width:100%;padding-right:0px;padding-left:0px;padding-top:25px;padding-bottom:25px;">
 																<div style="line-height:10px">
 																<img alt="Image"
-																		src="{{site}}{% static 'img/Logo.png' %}"
+																		src="https://raw.githubusercontent.com/juanshocl/controltareas/b34964cae4d11d1bd55b0b423062407839595180/static/img/Logo.png"
 																		style="display: block; height: auto; border: 0; width: 195px; max-width: 100%;"
 																		title="Image" width="195" />
 																</div>
@@ -153,7 +152,7 @@
 																style="padding-top:45px;width:100%;padding-right:0px;padding-left:0px;">
 																<div align="center" style="line-height:10px"><img
 																		alt="Image"
-																		src="{{site}}{% static 'img/illo_welcome_1.png' %}"
+																		src="https://raw.githubusercontent.com/juanshocl/controltareas/b34964cae4d11d1bd55b0b423062407839595180/static/img/illo_welcome_1.png"
 																		style="display: block; height: auto; border: 0; width: 540px; max-width: 100%;"
 																		title="Image" width="540" /></div>
 															</td>
