Modificaciones de envio de datos por correo

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -75,12 +75,12 @@
       </div> {% endcomment %}
       <!-- /.social-auth-links -->
 
-      <p class="mb-1">
+      {% comment %} <p class="mb-1">
         <a href="forgot-password.html">Olvide mi password</a>
       </p>
       <p class="mb-0">
         <a href="register.html" class="text-center">Registrar</a>
-      </p>
+      </p> {% endcomment %}
     </div>
     <!-- /.card-body -->
   </div>
