--- a/templates/base.html
+++ b/templates/base.html
@@ -43,9 +43,9 @@
         <li class="nav-item d-none d-sm-inline-block">
           <a href="{% url 'dashboard' %}" class="nav-link">Home</a>
         </li>
-        <li class="nav-item d-none d-sm-inline-block">
+        {% comment %} <li class="nav-item d-none d-sm-inline-block">
           <a href="#" class="nav-link">Contacto</a>
-        </li>
+        </li> {% endcomment %}
       </ul>
 
       <!-- Right navbar links -->
@@ -98,14 +98,14 @@
               <img src="{% static 'img/user2-160x160.jpg' %}" class="img-circle elevation-2" alt="User Image">
 
               <p>
-                <small>Inicio de sesion {{datos.login}}</small>
+                <small>Inicio de sesion :  {{datos.login}}</small>
               </p>
             </li>
             <!-- Menu Body -->
             <li class="user-body">
               <div class="row">
                 <div class="col-12 text-center">
-                  <small>Rol:
+                  <small>Rol:  
                     {% if datos.role == 1 %}
                     Administrador
                     {% endif %}
