--- a/templates/email/email.html
+++ b/templates/email/email.html
@@ -1,277 +1,85 @@
-
-<!DOCTYPE html>
-
-<html lang="es" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml">
+{% load static %}
+{% load parse_iso %}
+<html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<meta name="x-apple-disable-message-reformatting">
 	<title></title>
-	<meta charset="utf-8" />
-	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
-	<!--[if mso]><xml><o:OfficeDocumentSettings><o:PixelsPerInch>96</o:PixelsPerInch><o:AllowPNG/></o:OfficeDocumentSettings></xml><![endif]-->
-	<!--[if !mso]><!-->
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css" />
-	<!--<![endif]-->
+	<!--[if mso]>
+	<noscript>
+		<xml>
+			<o:OfficeDocumentSettings>
+				<o:PixelsPerInch>96</o:PixelsPerInch>
+			</o:OfficeDocumentSettings>
+		</xml>
+	</noscript>
+	<![endif]-->
 	<style>
-		* {
-			box-sizing: border-box;
-		}
-
-		body {
-			margin: 0;
-			padding: 0;
-		}
-
-		/*th.column{
-	padding:0
-}*/
-
-		a[x-apple-data-detectors] {
-			color: inherit !important;
-			text-decoration: inherit !important;
-		}
-
-		#MessageViewBody a {
-			color: inherit;
-			text-decoration: none;
-		}
-
+		table,
+		td,
+		div,
+		h1,
 		p {
-			line-height: inherit
-		}
-
-		@media (max-width:670px) {
-			.icons-inner {
-				text-align: center;
-			}
-
-			.icons-inner td {
-				margin: 0 auto;
-			}
-
-			.row-content {
-				width: 100% !important;
-			}
-
-			.stack .column {
-				width: 100%;
-				display: block;
-			}
+			font-family: Arial, sans-serif;
 		}
 	</style>
 </head>
 
-<body style="background-color: #F5F5F5; margin: 0; padding: 0; -webkit-text-size-adjust: none; text-size-adjust: none;">
-	<table border="0" cellpadding="0" cellspacing="0" class="nl-container" role="presentation"
-		style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #F5F5F5;" width="100%">
-		<tbody>
-			<tr>
-				<td>
-					<table align="center" border="0" cellpadding="0" cellspacing="0" class="row row-1"
-						role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
-						<tbody>
-							<tr>
-								<td>
-									<table align="center" border="0" cellpadding="0" cellspacing="0"
-										class="row-content stack" role="presentation"
-										style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000;"
-										width="650">
-										<tbody>
-											<tr>
-												<td class="column"
-													style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 5px; padding-bottom: 5px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;"
-													width="100%">
-													<div class="spacer_block"
-														style="height:30px;line-height:30px;font-size:1px;"> </div>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table align="center" border="0" cellpadding="0" cellspacing="0" class="row row-2"
-						role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
-						<tbody>
-							<tr>
-								<td>
-									<table align="center" border="0" cellpadding="0" cellspacing="0" class="row-content"
-										role="presentation"
-										style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #FFFFFF; color: #333;"
-										width="650">
-										<tbody>
-											<tr>
-												<td class="column"
-													style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-left: 25px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;"
-													width="50%">
-													<table border="0" cellpadding="0" cellspacing="0"
-														class="image_block" role="presentation"
-														style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;"
-														width="100%">
-														<tr>
-															<td
-																style="width:100%;padding-right:0px;padding-left:0px;padding-top:25px;padding-bottom:25px;">
-																<div style="line-height:10px">
-																<img alt="Image"
-																		src="https://raw.githubusercontent.com/juanshocl/controltareas/b34964cae4d11d1bd55b0b423062407839595180/static/img/Logo.png"
-																		style="display: block; height: auto; border: 0; width: 195px; max-width: 100%;"
-																		title="Image" width="195" />
-																</div>
-															</td>
-														</tr>
-													</table>
-												</td>
+<body style="margin:0;padding:0;">
+	<table role="presentation"
+		style="width:100%;border-collapse:collapse;border:0;border-spacing:0;background:#ffffff;">
+		<tr>
+			<td align="center" style="padding:0;">
+				<table role="presentation"
+					style="width:602px;border-collapse:collapse;border:1px solid #cccccc;border-spacing:0;text-align:left;">
+					<tr>
+						<td align="center" style="padding:40px 0 30px 0;background:#70bbd9;">
+							<img src="" alt="" width="300" style="height:auto;display:block;" />
+						</td>
+					</tr>
+					<tr>
+						<td style="padding:36px 30px 42px 30px;">
+							<table role="presentation"
+								style="width:100%;border-collapse:collapse;border:0;border-spacing:0;">
+								<tr>
+									<td style="padding:0 0 36px 0;color:#153643;">
+										<h1 style="font-size:24px;margin:0 0 20px 0;font-family:Arial,sans-serif;">
+											{{evento}}</h1>
+										<p
+											style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">
+											Estimado(a): {{user}}. <br> 
+											<p> En nuestro sistema se registro una tarea asociada a usted ( <b> {{tarea.nombreTarea}}</b>), {{tarea.descripcionTarea}}  , la cual
+												tiene fecha de vencimiento {{tarea.fechaPlazo|parse_iso|date:'d/m/Y'}}.</p> 
+										</p>
+										
+									</td>
+								</tr>
 
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table align="center" border="0" cellpadding="0" cellspacing="0" class="row row-3"
-						role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
-						<tbody>
-							<tr>
-								<td>
-									<table align="center" border="0" cellpadding="0" cellspacing="0"
-										class="row-content stack" role="presentation"
-										style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; background-color: #D6E7F0; color: #000000;"
-										width="650">
-										<tbody>
-											<tr>
-												<td class="column"
-													style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-left: 25px; padding-right: 25px; padding-top: 5px; padding-bottom: 60px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;"
-													width="100%">
-													<table border="0" cellpadding="0" cellspacing="0"
-														class="image_block" role="presentation"
-														style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;"
-														width="100%">
-														<tr>
-															<td
-																style="padding-top:45px;width:100%;padding-right:0px;padding-left:0px;">
-																<div align="center" style="line-height:10px"><img
-																		alt="Image"
-																		src="https://raw.githubusercontent.com/juanshocl/controltareas/b34964cae4d11d1bd55b0b423062407839595180/static/img/illo_welcome_1.png"
-																		style="display: block; height: auto; border: 0; width: 540px; max-width: 100%;"
-																		title="Image" width="540" /></div>
-															</td>
-														</tr>
-													</table>
-													<table border="0" cellpadding="0" cellspacing="0" class="text_block"
-														role="presentation"
-														style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;"
-														width="100%">
-														<tr>
-															<td
-																style="padding-left:15px;padding-right:10px;padding-top:20px;">
-																<div style="font-family: sans-serif">
-																	<div
-																		style="font-size: 12px; font-family: Lato, Tahoma, Verdana, Segoe, sans-serif; mso-line-height-alt: 18px; color: #052d3d; line-height: 1.5;">
-																		<p
-																			style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 75px;">
-																			<span style="font-size:50px;"><strong><span
-																						style="font-size:50px;"><span
-																							style="font-size:38px;">TAREA ASIGNADA</span></span></strong></span>
-																		</p>
-																		<p
-																			style="margin: 0; font-size: 14px; text-align: center; mso-line-height-alt: 51px;">
-																			<span style="font-size:34px;"><strong><span
-																						style="font-size:34px;"><span
-																							style="color:#2190e3;font-size:34px;">  {{tarea}}  </span></span></strong></span>
-																		</p>
-																	</div>
-																</div>
-															</td>
-														</tr>
-													</table>
-													<table border="0" cellpadding="10" cellspacing="0"
-														class="text_block" role="presentation"
-														style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; word-break: break-word;"
-														width="100%">
-														<tr>
-															<td>
-																<div style="font-family: sans-serif">
-																	<div
-																		style="font-size: 12px; mso-line-height-alt: 14.399999999999999px; color: #555555; line-height: 1.2; font-family: Lato, Tahoma, Verdana, Segoe, sans-serif;">
-																		<p
-																			style="margin: 0; font-size: 14px; text-align: center;">
-																			<span
-																				style="font-size:18px;color:#000000;">Estimado(a): {{user}}</span>
-																		</p>
-																		<p
-																			style="margin: 0; font-size: 14px; text-align: center;">
-																			<span
-																				style="font-size:18px;color:#000000;"> En nuestro sistema se registro una tarea asociada a usted, labores a realizar en la tarea, {{descripcion}},  la
-																				cual tiene plazo de vencimiento  
-																				{{fechaPlazo}}.</span></p>
-																	</div>
-																</div>
-															</td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<table align="center" border="0" cellpadding="0" cellspacing="0" class="row row-4"
-						role="presentation" style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;" width="100%">
-						<tbody>
-							<tr>
-								<td>
-									<table align="center" border="0" cellpadding="0" cellspacing="0"
-										class="row-content stack" role="presentation"
-										style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; color: #000000;"
-										width="650">
-										<tbody>
-											<tr>
-												<td class="column"
-													style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-weight: 400; text-align: left; vertical-align: top; padding-top: 5px; padding-bottom: 5px; border-top: 0px; border-right: 0px; border-bottom: 0px; border-left: 0px;"
-													width="100%">
-													<table border="0" cellpadding="0" cellspacing="0"
-														class="icons_block" role="presentation"
-														style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;"
-														width="100%">
-														<tr>
-															<td
-																style="color:#9d9d9d;font-family:inherit;font-size:15px;padding-bottom:5px;padding-top:5px;text-align:center;">
-																<table cellpadding="0" cellspacing="0"
-																	role="presentation"
-																	style="mso-table-lspace: 0pt; mso-table-rspace: 0pt;"
-																	width="100%">
-																	<tr>
-																		<td style="text-align:center;">
-																			<!--[if vml]><table align="left" cellpadding="0" cellspacing="0" role="presentation" style="display:inline-block;padding-left:0px;padding-right:0px;mso-table-lspace: 0pt;mso-table-rspace: 0pt;"><![endif]-->
-																			<!--[if !vml]><!-->
-																			<table cellpadding="0" cellspacing="0"
-																				class="icons-inner" role="presentation"
-																				style="mso-table-lspace: 0pt; mso-table-rspace: 0pt; display: inline-block; margin-right: -4px; padding-left: 0px; padding-right: 0px;">
-																				<!--<![endif]-->
-																				<tr>
-																				</tr>
-																			</table>
-																		</td>
-																	</tr>
-																</table>
-															</td>
-														</tr>
-													</table>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</td>
-			</tr>
-		</tbody>
-	</table><!-- End -->
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td style="padding:30px;background:#ee4c50;">
+							<table role="presentation"
+								style="width:100%;border-collapse:collapse;border:0;border-spacing:0;font-size:9px;font-family:Arial,sans-serif;">
+								<tr>
+									<td style="padding:0;width:50%;" align="left">
+										<p
+											style="margin:0;font-size:14px;line-height:16px;font-family:Arial,sans-serif;color:#ffffff;">
+											&reg; Copyright © 2020-2021 Admin TaskList. All rights reserved.<br />
+										</p>
+									</td>
+
+								</tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+	</table>
 </body>
 
 </html>
