--- a/templates/email/email.html
+++ b/templates/email/email.html
@@ -6,7 +6,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<meta name="x-apple-disable-message-reformatting">
-	<title></title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+	<title>Notificaciones por correo</title>
 	<!--[if mso]>
 	<noscript>
 		<xml>
@@ -36,7 +38,8 @@
 					style="width:602px;border-collapse:collapse;border:1px solid #cccccc;border-spacing:0;text-align:left;">
 					<tr>
 						<td align="center" style="padding:40px 0 30px 0;background:#70bbd9;">
-							<img src="" alt="" width="300" style="height:auto;display:block;" />
+							<img src="https://raw.githubusercontent.com/juanshocl/controltareas/jmunoz-mails/static/img/email.png"
+								alt="" width="300" style="height:auto;display:block;" />
 						</td>
 					</tr>
 					<tr>
@@ -49,11 +52,49 @@
 											{{evento}}</h1>
 										<p
 											style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">
-											Estimado(a): {{user}}. <br> 
-											<p> En nuestro sistema se registro una tarea asociada a usted ( <b> {{tarea.nombreTarea}}</b>), {{tarea.descripcionTarea}}  , la cual
-												tiene fecha de vencimiento {{tarea.fechaPlazo|parse_iso|date:'d/m/Y'}}.</p> 
+											Estimado(a): {{user}}. <br>
+											<p> En nuestro sistema se registro una tarea
+												{% if evento == 'Tarea Rechazada' %}Creada por usted la cual fue
+												Rechazada por el usuario <b>{{rechazadoPor}}<b>{% endif %}
+												{% if evento == 'Actualizacion de tarea' %} asignada a usted {% endif %}
+												se adjuntan detalles de la tarea:
+												<div class="container-fluid">
+													<div class="row">
+														<div class="col-md-12 table-responsive">
+
+															<table class="table table-bordered">
+																<thead>
+																	<tr>
+																		<th scope="col">ID</th>
+																		<th scope="col">Nombre Tarea</th>
+																		<th scope="col">Descripcion Tarea</th>
+																		<th scope="col">Fecha Plazo</th>
+																		{% if evento == 'Tarea Rechazada' %}<th scope="col">Motivo</th>{% endif %}
+
+																	</tr>
+																</thead>
+																<tbody>
+																	<tr>
+																		<th scope="row">{{tarea.idTarea}}</th>
+																		<td>{{tarea.nombreTarea}}</td>
+																		<td>{{tarea.descripcionTarea}} </td>
+																		<td>{{tarea.fechaPlazo|parse_iso|date:'d/m/Y'}}</td>
+																		{% if evento == 'Tarea Rechazada' %}<td>{{motivo}}</td>{% endif %}
+
+																	</tr>
+																</tbody>
+															</table>
+														</div>
+													</div>
+												</div>
+												<div>
+												El presente email tiene como funcion informar, para tomar las medidas necesarias para resolver lo indicado en este.
+												</div>
+											</p>
 										</p>
-										
+												<div class="text-center">
+												Mensaje enviado de forma automatica, no responder
+												</div>
 									</td>
 								</tr>
 
@@ -80,6 +121,7 @@
 			</td>
 		</tr>
 	</table>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
